--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 buildscript {
 	repositories {
-		gradlePluginPortal()
-		maven { url "https://repo.spring.io/plugins-release" }
+		maven { url "https://maven.aliyun.com/repository/gradle-plugin"}
+		maven { url "https://maven.aliyun.com/repository/spring-plugin"}
+		//gradlePluginPortal()
+		//maven { url "https://repo.spring.io/plugins-release" }
 	}
 	dependencies {
 		classpath("io.spring.gradle:propdeps-plugin:0.0.9.RELEASE")
@@ -148,7 +150,8 @@ configure(allprojects) { project ->
 	}
 
 	repositories {
-		mavenCentral()
+		//mavenCentral()
+		maven { url "https://maven.aliyun.com/repository/central"}
 		maven { url "https://repo.spring.io/libs-spring-framework-build" }
 	}
 
