--- a/settings.gradle
+++ b/settings.gradle
@@ -20,7 +20,8 @@ include "spring-webmvc"
 include "spring-webflux"
 include "spring-websocket"
 include "spring-framework-bom"
-
+// 自添模块
+include 'spring-chongdianxiaozi'
 // Exposes gradle buildSrc for IDE support
 include "buildSrc"
 rootProject.children.find{ it.name == "buildSrc" }.name = "spring-build-src"
